--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
       - POSTGRES_PASSWORD=12345
       - POSTGRES_DB=postgres
     volumes:
-      - data:/var/lib/postgres/data
+      - data:/var/lib/postgresql/data
     ports:
       - "5433:5432"
   
