--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,18 @@
 version: '3'
 
 services:
-  postgresdb:
+  api:
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    depends_on:
+      - postgresDB
+    environment:
+      - DB_URL=host=postgresDB user=postgres password=12345 dbname=postgres port=5432 sslmode=disable
+    restart: on-failure
+    ports:
+      - "3000:3000"
+  postgresDB:
     container_name: psql
     image: postgres:16-alpine
     environment:
@@ -13,17 +24,7 @@ services:
     ports:
       - "5433:5432"
   
-  api:
-    build: 
-      context: .
-      dockerfile: Dockerfile
-    depends_on:
-      - postgresdb
-    environment:
-     - DB_URL=host=postgresdb user=postgres password=12345 dbname=postgres port=5432 sslmode=disable
-    restart: on-failure
-    ports:
-      - "3000:3000"
+
   
 volumes:
   data:
